# Simple-stack

./: .gitignore  CMakeLists.txt  README.md  build.sh
example/: HOWTO.md  example.c
export/: stack.h
include/: stack.h  types.h  types_cast.h  types_stack.h
src/: cast.c  stack.c
src/code/: stack.c
src/headers/: types.h
